Linkede Loays CSS til kontakt og om sider

--- a/kontakt.html
+++ b/kontakt.html
@@ -46,6 +46,7 @@
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
     <link href="css/amanda_styles.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
