Linket til Loay´s css

--- a/samsung.html
+++ b/samsung.html
@@ -38,8 +38,11 @@
           rel="stylesheet">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
+    <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
+
+
 
 
 
