--- a/samsung.html
+++ b/samsung.html
@@ -85,7 +85,7 @@
             <div class="row justify-content-end">
                 <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="index.html">Forside</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="mellemside.html">Shop</a></div>
-                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="kontakt.html">Kontak os</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="kontakt.html">Kontak</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="om.html">Om os</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="login.html">Login</a></div>
                 <div class="col-lg-auto p-3 text-start a1 d-none"><a href="indkoebskurv.html" target="_blank">
