Jeg har givet tekst mere padding + centreret tekst også. Knappen har fået en border-radius på 5 px. Skift bg på iPhone Covers div.

--- a/samsung.html
+++ b/samsung.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Samsung covers</title>
+    <title>Samsung Covers</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -103,49 +103,65 @@
 
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
-        <div class="col text-center">
+        <div class="col text-center text-white">
             <h1 class="text">Samsung</h1>
             <p class="text2">Køb et lækkert cover til din Samsung telefon</p>
         </div>
     </div>
 </div>
 
-    <div class="row gy-3">
-        <div class="row gy-3 mt-3">
-            <div class="col-auto"><div class="image-small redcover">
+<div class="row gy-3">
+    <div class="row gy-3 mt-3">
+        <div class="col-auto">
+            <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
-                <h3>Samsung cover</h3>
-                <p>"Hand in Hand"</p>
-                <h2>249,00</h2>
+                <div class="">
+                    <h3 class="pt-2">Samsung Cover</h3>
+                    <p class="pt-2">"Hand in Hand"</p>
+                    <h2 class="pt-2 text-center">249,00</h2>
+                </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
-            </div></div>
-
-            <div class="col-auto"><div class="image-small orangecover">
-                <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
-                <h3>Samsung cover</h3>
-                <p>"Flower"</p>
-                <h2>249,00</h2>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
-            </div></div>
-
-            <div class="col-auto"><div class="image-small greencover">
-                <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
-                <h3>Samsung cover</h3>
-                <p>"Earth"</p>
-                <h2>249,00</h2>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
-            </div></div>
-
-            <div class="col-auto"><div class="image-small greycover">
-                <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
-                <h3>Samsung cover</h3>
-                <p>"Woman"</p>
-                <h2>249,00</h2>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
-            </div></div>
+            </div>
         </div>
 
+        <div class="col-auto">
+            <div class="image-small orangecover">
+                <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
+                <div class="">
+                    <h3 class="pt-2">Samsung Cover</h3>
+                    <p class="pt-2 text-center">"Flower"</p>
+                    <h2 class="pt-2 text-center">249,00</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+            </div>
+        </div>
+
+        <div class="col-auto">
+            <div class="image-small greencover">
+                <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
+                <div>
+                    <h3 class="pt-2">Samsung Cover</h3>
+                    <p class="pt-2 text-center">"Earth"</p>
+                    <h2 class="pt-2 text-center">249,00</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+            </div>
+        </div>
+
+        <div class="col-auto">
+            <div class="image-small greycover">
+                <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
+                <div>
+                    <h3 class="pt-2">Samsung Cover</h3>
+                    <p class="pt-2 text-center">"Woman"</p>
+                    <h2 class="pt-2 text-center">249,00</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+            </div>
+        </div>
     </div>
+
+</div>
 
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
