Kommentar til HTML

--- a/samsung.html
+++ b/samsung.html
@@ -50,6 +50,8 @@
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
 
+<!--Topbar-->
+
 <div class="container-fluid h-auto navbar-container cole">
     <div class="navbar row p-3">
 
@@ -100,6 +102,10 @@
 
     </div>
 </div>
+<!--Topbar slut-->
+
+
+<!--Farvet container/boks med teksten Samsung og Køb et lækkert cover til din Samsung telefon-->
 
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
@@ -109,6 +115,9 @@
         </div>
     </div>
 </div>
+
+
+<!--Boks med vores røde cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
 
 <div class="row gy-3">
     <div class="row gy-3 mt-3">
@@ -124,6 +133,9 @@
             </div>
         </div>
 
+
+        <!--Boks med vores orange cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
+
         <div class="col-auto">
             <div class="image-small orangecover">
                 <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
@@ -135,6 +147,8 @@
                 <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
             </div>
         </div>
+
+        <!--Boks med vores grønt cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
 
         <div class="col-auto">
             <div class="image-small greencover">
@@ -148,6 +162,9 @@
             </div>
         </div>
 
+
+        <!--Boks med vores grå cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
+
         <div class="col-auto">
             <div class="image-small greycover">
                 <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
@@ -160,8 +177,9 @@
             </div>
         </div>
     </div>
-
 </div>
+
+<!--Grå footer med forskellige betalings svg-filer-->
 
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
@@ -227,6 +245,8 @@
 
 </div>
 
+
+<!--Mørkegrå footer med link til kontakt + tekst lervering og returningering samt SoMe-medier-->
 <div class="footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
