--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="p-5 text-center">
         <div>
             <label for="mail"></label>
-            <input class="text-center p-2 input w-100 " id="mail" name="Email" type="Email" placeholder="Email">
+            <input class="text-center p-2 input  " id="mail" name="Email" type="Email" placeholder="Email">
 
         </div>
         <div class="p-3">
@@ -304,7 +304,7 @@
 <div class="footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
-            <li class="p-1"><a href="kontakt.html">Kontakt os</a></li>
+            <li class="p-1"><a href="kontakt.html">Kontakt</a></li>
             <li class="p-1">Levering</li>
             <li class="p-1">Returnering</li>
         </ul>
