--- a/samsung.html
+++ b/samsung.html
@@ -40,6 +40,8 @@
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
+
 
 
 
@@ -250,7 +252,7 @@
 <div class="footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
-            <li class="p-1"><a href="kontakt.html">Kontakt os</a></li>
+            <li class="p-1"><a href="kontakt.html">Kontakt</a></li>
             <li class="p-1">Levering</li>
             <li class="p-1">Returnering</li>
         </ul>
