--- a/tilmedle.html
+++ b/tilmedle.html
@@ -188,7 +188,7 @@
 <div class= "footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
-            <li class="p-1"><a href="kontakt.html">Kontakt os</a></li>
+            <li class="p-1"><a href="kontakt.html">Kontakt</a></li>
             <li class="p-1">Levering</li>
             <li class="p-1">Returnering</li>
         </ul>
