Om os elementer

--- a/om.html
+++ b/om.html
@@ -49,7 +49,7 @@
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
-    <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
     <link href="css/amanda_styles.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
@@ -101,7 +101,7 @@
                     <div class="row justify-content-end">
                         <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="mellemside.html">Shop</a></div>
-                        <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt os</a></div>
+                        <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
                         <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html" target="_blank">
@@ -124,12 +124,11 @@
 
 
         <!--Overskrift som er en del af vores logo-->
-        <div class="container-fluid text-center text-primary">
-            <h1 class="sacramento">Ocean Case</h1>
-        </div>
+        <div class="col-lg-12 row">
 
-        <div>
-            <p>
+        <div class="container-fluid text-primary col-lg-6">
+            <h1 class="sacramento text-center pt-4">Ocean Case</h1>
+            <p class="josefine_sans_regular p-4">
                 Ocean Case er et bæredygtigt tiltag der
                 har en stor fælles vision om at gøre verden
                 til et mere miljøvenligt og bæredygtigt sted.
@@ -151,8 +150,26 @@
             </p>
         </div>
 
+        <div class="col-lg-6">
+            <p class="josefine_sans_regular p-4 verden_tekst">
+                Ocean Case bygger på ønsket om at
+                forbedre miljøet og at passe bedre på
+                vores verden. Derfor er alle vores pro-
+                dukter miljøvenlige, produceret i 100%
+                genanvendelige materialer.
+                <br>
+                <br>
+                Ud over at produkterne er bæredygtige,
+                har vi dog også sparet på emballagen
+                vores produkter bliver sendt i. Vi prøver
+                hele tiden på at blive mere miljøvenlige.
+            </p>
+        </div>
+
         <div class="verden_kompost">
-            <img src="images/verden_kompost.jpg">
+            <img src="images/verden_kompost.jpg" alt="Verdenskort" class="verden_center">
+        </div>
+
         </div>
 
 
