"Tak for dit svar" side oprettet og kodet

--- a/kontakt.html
+++ b/kontakt.html
@@ -142,7 +142,7 @@
             </div>
 
             <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
-            <form method="get" action="index.html">
+            <form method="get" action="takspg.html">
 
                 <!--Navn-->
                 <div>
