--- a/takspg.html
+++ b/takspg.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Om os</title>
+    <title>Tak for dit spørgsmål</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -40,11 +40,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
-
-    <!--Link til Sacramento font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
@@ -117,79 +112,15 @@
         </div>
 
 
-        <!--Farvet boks med teksten "Kontakt os"-->
-        <div class="container-fluid om_os josefine_sans_medium text-center text-secondary">
-            <h1>Om os</h1>
+        <!--Tak for spørgsmålet tekst-->
+        <div class="text-primary josefine_sans_regular text-center">
+            <h1 class="pt-4">Tak for dit spørgsmål</h1>
+            <p class="p-2">Vi besvarer dit spørgsmål hurtigst muligt,
+                og du vil få dit svar tilsendt på den email, du har angivet. <br><br>
+                Med venlig hilsen
+            </p>
+            <h3 class="sacramento pb-4">Ocean Case teamet</h3>
         </div>
-
-
-        <!--Div der holder grid-->
-        <div class="col-lg-12 row">
-
-            <!--Div der holder overskriften og den første brødtekst-->
-            <div class="container-fluid text-primary col-lg-6">
-                <h1 class="sacramento text-center pt-4">Ocean Case</h1>
-                <p class="josefine_sans_regular p-4">
-                    Ocean Case er et bæredygtigt tiltag der
-                    har en stor fælles vision om at gøre verden
-                    til et mere miljøvenligt og bæredygtigt sted.
-                    <br>
-                    <br>
-                    Ocean Case er til dig der ønsker en
-                    miljøvenlig løsning men samtidig er med
-                    til at gøre verden til et bedre sted. Det
-                    handler ikke om kun at beskytte din
-                    telefon, men også at beskytte vores jord.
-                    <br>
-                    <br>
-                    At leve bæredygtigt betyder, at vi kan
-                    skaffe de nuværende mennesker og
-                    miljøet det bedste livsgrundlag her og nu.
-                    Men dog på en måde, der ikke fratager
-                    de kommende generationers muligheder
-                    for at dække deres behov.
-                </p>
-                <div class="col-lg-6">
-                    <p class="josefine_sans_regular p-4 verden_tekst">
-                        Ocean Case bygger på ønsket om at
-                        forbedre miljøet og at passe bedre på
-                        vores verden. Derfor er alle vores pro-
-                        dukter miljøvenlige, produceret i 100%
-                        genanvendelige materialer.
-                        <br>
-                        <br>
-                        Ud over at produkterne er bæredygtige,
-                        har vi dog også sparet på emballagen
-                        vores produkter bliver sendt i. Vi prøver
-                        hele tiden på at blive mere miljøvenlige.
-                    </p>
-                </div>
-            </div>
-
-            <div class="verden_kompost">
-                <div>
-                    <img src="images/verden_kompost.jpg" alt="Verdenskort" class="verden_center">
-                </div>
-
-                <div class="col-lg-6">
-                    <p class="josefine_sans_regular p-4 verden_tekst">
-                        Ocean Case bygger på ønsket om at
-                        forbedre miljøet og at passe bedre på
-                        vores verden. Derfor er alle vores pro-
-                        dukter miljøvenlige, produceret i 100%
-                        genanvendelige materialer.
-                        <br>
-                        <br>
-                        Ud over at produkterne er bæredygtige,
-                        har vi dog også sparet på emballagen
-                        vores produkter bliver sendt i. Vi prøver
-                        hele tiden på at blive mere miljøvenlige.
-                    </p>
-                </div>
-            </div>
-
-    </div>
-
 
 
         <!--Footer-->
