--- a/samsung.html
+++ b/samsung.html
@@ -113,7 +113,7 @@
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
             <h1 class="text">Samsung</h1>
-            <p class="text2">Køb et lækkert cover til din Samsung telefon</p>
+            <p class="text2">Køb et lækkert cover til din Samsung</p>
         </div>
     </div>
 </div>
@@ -127,11 +127,10 @@
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
                 <div class="">
-                    <h3 class="pt-2">Samsung Cover</h3>
-                    <p class="pt-2">"Hand in Hand"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Hand In Hand</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -142,11 +141,10 @@
             <div class="image-small orangecover">
                 <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
                 <div class="">
-                    <h3 class="pt-2">Samsung Cover</h3>
-                    <p class="pt-2 text-center">"Flower"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Flower</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -156,11 +154,10 @@
             <div class="image-small greencover">
                 <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
                 <div>
-                    <h3 class="pt-2">Samsung Cover</h3>
-                    <p class="pt-2 text-center">"Earth"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Earth</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -171,11 +168,10 @@
             <div class="image-small greycover">
                 <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
                 <div>
-                    <h3 class="pt-2">Samsung Cover</h3>
-                    <p class="pt-2 text-center">"Woman"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Woman</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
     </div>
