--- a/iphone.html
+++ b/iphone.html
@@ -105,8 +105,8 @@
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
-            <h1 class="text">iPhone</h1>
-            <p class="text2">Køb et lækkert cover til din iPhone telefon</p>
+            <h1 class="text">IPhone</h1>
+            <p class="text2">Køb et lækkert cover til din iPhone</p>
         </div>
     </div>
 </div>
@@ -117,11 +117,10 @@
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
                 <div class="">
-                    <h3 class="pt-2">iPhone Cover</h3>
-                    <p class="pt-2">"Hand in Hand"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2">Hand in Hand</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -129,11 +128,10 @@
             <div class="image-small orangecover">
                 <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
                 <div class="">
-                    <h3 class="pt-2">iPhone Covers</h3>
-                    <p class="pt-2 text-center">"Flower"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Flower</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -141,11 +139,10 @@
             <div class="image-small greencover">
                 <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
                 <div>
-                    <h3 class="pt-2">iPhone Cover</h3>
-                    <p class="pt-2 text-center">"Earth"</p>
-                    <h2 class="pt-2 text-center">249,00</h2>
+                    <p class="pt-2 text-center">Earth</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
 
@@ -153,11 +150,10 @@
             <div class="image-small greycover">
                 <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
                 <div>
-                <h3 class="pt-2">iPhone Cover</h3>
-                <p class="pt-2 text-center">"Woman"</p>
-                <h2 class="pt-2 text-center">249,00</h2>
+                <p class="pt-2 text-center">Woman</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
     </div>
