--- a/samsung.html
+++ b/samsung.html
@@ -174,6 +174,51 @@
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
+
+
+        <div class="col-auto">
+            <div class="image-small orangecover2">
+                <img class="coverbillede5" src="images/Orange_Cover.jpg" alt="orange cover2">
+                <div class="">
+                    <p class="pt-2 text-center">Flower</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+            </div>
+        </div>
+
+        <div class="col-auto">
+            <div class="image-small redcover2">
+                <img class="coverbillede6" src="images/Red_Cover.jpg" alt="red cover2">
+                <div class="">
+                    <p class="pt-2">Hand in Hand</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+            </div>
+        </div>
+
+        <div class="col-auto">
+            <div class="image-small greycover2">
+                <img class="coverbillede7" src="images/Grey_Cover.jpg" alt="grey cover2">
+                <div>
+                    <p class="pt-2 text-center">Woman</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+            </div>
+        </div>
+
+        <div class="col-auto">
+            <div class="image-small greencover2">
+                <img class="coverbillede8" src="images/Green_Cover.jpg" alt="green cover2">
+                <div>
+                    <p class="pt-2 text-center">Earth</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+            </div>
+        </div>
     </div>
 </div>
 
