--- a/iphone.html
+++ b/iphone.html
@@ -112,7 +112,7 @@
 </div>
 
 <div class="row gy-3">
-    <div class="row gy-3 mt-3">
+    <div class="row gy-3 mt-3 justify-content-center">
         <div class="col-auto">
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
