--- a/samsung.html
+++ b/samsung.html
@@ -122,7 +122,7 @@
 <!--Boks med vores røde cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
 
 <div class="row gy-3">
-    <div class="row gy-3 mt-3">
+    <div class="row gy-3 mt-3 justify-content-center">
         <div class="col-auto">
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
