--- a/samsung.html
+++ b/samsung.html
@@ -219,6 +219,18 @@
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
+
+        <div class="col-auto">
+            <div class="image-small orangecover3">
+                <img class="coverbillede9" src="images/Orange_Cover.jpg" alt="orange cover3">
+                <div class="">
+                    <p class="pt-2 text-center">Flower</p>
+                    <h2 class="pt-2 text-center">249,00 kr.</h2>
+                </div>
+                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+            </div>
+        </div>
+
     </div>
 </div>
 
