--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="robots" content="All">
     <meta name="author" content="Amanda, Loay, Mikkel, Sophie">
     <meta name="copyright" content="Skoleprojekt">
+    <!-- liknk til ikoner og fonter-->
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,6 +53,8 @@
 <body>
 
 <!-- Her skal sidens indhold ligge -->
+
+<!--nav bar-->
 <div class="container-fluid h-auto navbar-container cole">
     <div class="navbar row p-3">
 
@@ -72,6 +75,7 @@
         </div>
 
         <div class="col-8 col-lg-4 text-center">
+            <!--logo-->
             <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
         </div>
         <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
@@ -82,7 +86,7 @@
                       transform="translate(-1.5 -3.03)" fill="#fff"/>
             </svg></a></div>
 
-
+        <!--navbar og link til sider og burgermenu-->
         <div class="nav col-12 col-lg-8">
             <div class="row justify-content-end">
                 <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
@@ -102,7 +106,7 @@
 
     </div>
 </div>
-
+<!--img 1-->
 <div class="container-fluid ">
     <div class="row image-medium h-100  ">
         <div class="col-12 p-0">
@@ -111,7 +115,7 @@
     </div>
 </div>
 
-
+<!--text-->
 <div class="container-fluid">
     <div class="row h-100 align-content-center bg-primary ">
         <div class="col text-center">
@@ -123,6 +127,7 @@
         </div>
     </div>
 </div>
+<!--text og ikoner-->
 <div class="container-fluid colar p-3 mt-5">
     <div class="row">
         <div class="col-12 mt-4">
@@ -191,6 +196,7 @@
         </div>
     </div>
 </div>
+<!--img 2 og nyhedbrev-->
 <div class="image-large h-auto ny align-items-center p-0 ">
     <h2 class="text-center pt-2 text">Nyhedsbrev</h2>
     <div class="justify-content-center d-flex">
@@ -231,12 +237,13 @@
 
 
 </div>
+<!--img 3-->
 <div class="container-fluid p-0 ">
 <div class="h-100 image-medium row col-12">
     <img src="images/Recycle_Badge.jpeg" alt="recycle">
 </div>
 </div>
-
+<!--footer 1-->
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
         <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa"
@@ -300,7 +307,7 @@
     </svg>
 
 </div>
-
+<!--footer 2-->
 <div class="footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
