--- a/om.html
+++ b/om.html
@@ -18,7 +18,7 @@
     <meta name="copyright" content="Skoleprojekt">
 
 
-    <!--Links til fonts og ikoner-->
+    <!-- liknk til ikoner og fonter-->
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,12 +27,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Sacramento&display=swap"
           rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap"
@@ -49,8 +51,8 @@
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
-    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
     <link href="css/amanda_styles.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,9 +69,10 @@
     <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
     <div>
 
-        <!--Topbar-->
+        <!--nav bar-->
         <div class="container-fluid h-auto navbar-container cole">
             <div class="navbar row p-3">
+
                 <div class="col-2 d-flex d-lg-none">
                     <div class="toggle d-flex align-items-center pa">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="21" viewBox="0 0 30 21">
@@ -82,21 +85,23 @@
                                       stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
                             </g>
                         </svg>
+
                     </div>
                 </div>
 
                 <div class="col-8 col-lg-4 text-center">
-                    <h1 class="logo">Ocean Case</h1>
+                    <!--logo-->
+                    <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
                 </div>
-
                 <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
-                    <a href="indkoebskurv.html" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
+
+                    <a href="indkoebskurv.html"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                         <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                               d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
                               transform="translate(-1.5 -3.03)" fill="#fff"/>
-                    </svg></a>
-                </div>
+                    </svg></a></div>
 
+                <!--navbar og link til sider og burgermenu-->
                 <div class="nav col-12 col-lg-8">
                     <div class="row justify-content-end">
                         <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
@@ -104,7 +109,7 @@
                         <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
-                        <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html" target="_blank">
+                        <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                                 <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                                       d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
@@ -113,6 +118,7 @@
                         </a></div>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -192,7 +198,7 @@
 
 
 
-        <!--Footer-->
+        <!--footer 1-->
         <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
                 <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa"
@@ -256,13 +262,16 @@
             </svg>
         </div>
 
+
+        <!--footer 2-->
         <div class="footer p-3">
             <div class="d-flex justify-content-between">
                 <ul>
-                    <li class="p-1"><a href="kontakt.html">Kontakt os</a></li>
+                    <li class="p-1"><a href="kontakt.html">Kontakt</a></li>
                     <li class="p-1">Levering</li>
                     <li class="p-1">Returnering</li>
                 </ul>
+
                 <div class="footerSocial d-flex align-items-center">
                     <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
@@ -275,6 +284,7 @@
             const nav = document.querySelector('.nav')
             toggle.addEventListener('click', () => nav.classList.toggle('show'));
         </script>
+
     </div>
 </div>
 
