--- a/takspg.html
+++ b/takspg.html
@@ -18,7 +18,7 @@
     <meta name="copyright" content="Skoleprojekt">
 
 
-    <!--Links til fonts og ikoner-->
+    <!-- liknk til ikoner og fonter-->
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,12 +27,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Sacramento&display=swap"
           rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap"
@@ -44,13 +46,12 @@
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
-    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
     <link href="css/amanda_styles.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 
 
 <!--I <body> har man alt indhold på siden som brugeren kan se-->
@@ -62,9 +63,10 @@
     <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
     <div>
 
-        <!--Topbar-->
+        <!--nav bar-->
         <div class="container-fluid h-auto navbar-container cole">
             <div class="navbar row p-3">
+
                 <div class="col-2 d-flex d-lg-none">
                     <div class="toggle d-flex align-items-center pa">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="21" viewBox="0 0 30 21">
@@ -81,17 +83,18 @@
                 </div>
 
                 <div class="col-8 col-lg-4 text-center">
-                    <h1 class="logo">Ocean Case</h1>
+                    <!--logo-->
+                    <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
                 </div>
-
                 <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
-                    <a href="indkoebskurv.html" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
+
+                    <a href="indkoebskurv.html"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                         <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                               d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
                               transform="translate(-1.5 -3.03)" fill="#fff"/>
-                    </svg></a>
-                </div>
+                    </svg></a></div>
 
+                <!--navbar og link til sider og burgermenu-->
                 <div class="nav col-12 col-lg-8">
                     <div class="row justify-content-end">
                         <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
@@ -99,7 +102,7 @@
                         <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontakt</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
                         <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
-                        <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html" target="_blank">
+                        <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                                 <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                                       d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
@@ -108,6 +111,7 @@
                         </a></div>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -125,11 +129,11 @@
 <!--            <div class="tilbage_knap_padding">-->
 <!--                <a class="tilbage_knap" href="index.html">Tilbage til forsiden</a>-->
 <!--            </div>-->
-<!--        </div>-->
+        </div>
 
 
-        <!--Footer-->
-        <div class="d-flex justify-content-evenly color2 p-3 align-items-center footer">
+        <!--footer 1-->
+        <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
                 <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa"
                       d="M33.054,16.263s.534,2.616.654,3.164H31.359c.232-.626,1.125-3.059,1.125-3.059-.014.021.232-.64.373-1.048l.2.942ZM40.5,5.625v24.75a3.376,3.376,0,0,1-3.375,3.375H3.375A3.376,3.376,0,0,1,0,30.375V5.625A3.376,3.376,0,0,1,3.375,2.25h33.75A3.376,3.376,0,0,1,40.5,5.625ZM10.723,23.288l4.444-10.913H12.178L9.415,19.828l-.3-1.512L8.128,13.3a1.176,1.176,0,0,0-1.28-.921H2.3l-.049.218a11.158,11.158,0,0,1,2.967,1.2l2.517,9.492Zm6.638.014,1.772-10.927H16.305L14.541,23.3h2.82ZM27.2,19.73c.014-1.245-.745-2.194-2.37-2.974-.991-.5-1.6-.837-1.6-1.35.014-.464.513-.942,1.624-.942a4.845,4.845,0,0,1,2.1.415l.253.12.387-2.363a7.022,7.022,0,0,0-2.531-.464c-2.791,0-4.753,1.491-4.767,3.614-.021,1.568,1.406,2.44,2.475,2.967,1.09.534,1.462.886,1.462,1.357-.014.731-.886,1.069-1.695,1.069a5.632,5.632,0,0,1-2.651-.584l-.373-.176-.394,2.454a8.628,8.628,0,0,0,3.15.584C25.242,23.463,27.176,21.994,27.2,19.73ZM37.125,23.3,34.847,12.375H32.66a1.391,1.391,0,0,0-1.477.907l-4.2,10.02h2.967s.485-1.35.591-1.638h3.628c.084.387.338,1.638.338,1.638Z"
@@ -192,13 +196,16 @@
             </svg>
         </div>
 
+
+        <!--footer 2-->
         <div class="footer p-3">
             <div class="d-flex justify-content-between">
                 <ul>
-                    <li class="p-1"><a href="kontakt.html">Kontakt os</a></li>
+                    <li class="p-1"><a href="kontakt.html">Kontakt</a></li>
                     <li class="p-1">Levering</li>
                     <li class="p-1">Returnering</li>
                 </ul>
+
                 <div class="footerSocial d-flex align-items-center">
                     <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
@@ -211,6 +218,7 @@
             const nav = document.querySelector('.nav')
             toggle.addEventListener('click', () => nav.classList.toggle('show'));
         </script>
+
     </div>
 </div>
 
