--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
     <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
+
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -119,9 +121,9 @@
 <div class="container-fluid">
     <div class="row h-100 align-content-center bg-primary ">
         <div class="col text-center">
-            <h1 class="h11 p-4">Bæredygtige Covers</h1>
+            <h1 class="h11 p-4">Bæredygtige covers</h1>
             <p class="p11">Få god samvittighed ved at købe vores lækre covers lavet af genbrugsplast fra verdens have.
-                Vi har coverstil enhver smag. Enkelt, bæredygtigt og super smart.
+                Vi har covers til enhver smag. Det er enkelt, bæredygtigt og super smart.
 
             </p>
         </div>
@@ -142,7 +144,7 @@
                 </div>
                 <div class="col-8 d-flex justify-content-center align-items-center flex-column">
                     <p>Mindre forbrug</p>
-                    <h1>Større genbrug</h1>
+                    <h1>Mere genbrug</h1>
                 </div>
             </div>
 
@@ -219,7 +221,7 @@
         </svg>
     </div>
     <p class="text-center text2">Tilmeld dig vores nyhedsbrev og få
-        super lækre fordele og løbende nye
+        super lækre fordele samt løbende nye
         opdateringer. </p>
 
     <div class="p-5 text-center">
@@ -239,7 +241,7 @@
 </div>
 <!--img 3-->
 <div class="container-fluid p-0 ">
-<div class="h-100 image-medium row col-12">
+<div class="h-100 image-medium row col-12 p-5">
     <img src="images/Recycle_Badge.jpeg" alt="recycle">
 </div>
 </div>
