takspg.html knap

--- a/takspg.html
+++ b/takspg.html
@@ -125,11 +125,30 @@
             </p>
             <h3 class="sacramento pb-4">Ocean Case teamet</h3>
 
-<!--            &lt;!&ndash;Link til at komme tilbage til forsiden&ndash;&gt;-->
-<!--            <div class="tilbage_knap_padding">-->
-<!--                <a class="tilbage_knap" href="index.html">Tilbage til forsiden</a>-->
-<!--            </div>-->
+            <!--Link til at komme tilbage til forsiden-->
+            <div class="tilbage_knap_padding">
+                <a class="tilbage_knap" href="index.html">Tilbage til forsiden</a>
+            </div>
         </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+
 
 
         <!--footer 1-->
