--- a/iphone.html
+++ b/iphone.html
@@ -40,6 +40,7 @@
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mikkel_styles.css" rel="stylesheet" type="text/css">
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/navogfooter.css" rel="stylesheet" type="text/css">
 
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
@@ -105,8 +106,8 @@
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
-            <h1 class="text">IPhone</h1>
-            <p class="text2">Køb et lækkert cover til din iPhone</p>
+            <h1 class="">IPhone</h1>
+            <p class="mt-2">Køb et lækkert cover til din iPhone</p>
         </div>
     </div>
 </div>
