--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </div>
 <!--img 3-->
 <div class="container-fluid p-0 ">
-<div class="h-100 image-medium row col-12 p-5">
+<div class="h-100 image-medium row col-12 p-5 m-0">
     <img src="images/Recycle_Badge.jpeg" alt="recycle">
 </div>
 </div>
