Lavet media query til desktop på "om os" siden

--- a/om.html
+++ b/om.html
@@ -123,7 +123,7 @@
         </div>
 
 
-        <!--Farvet boks med teksten "Kontakt os"-->
+        <!--Farvet boks med teksten "Om os"-->
         <div class="container-fluid om_os josefine_sans_medium text-center text-secondary">
             <h1>Om os</h1>
         </div>
@@ -133,7 +133,7 @@
         <div class="col-lg-12 row">
 
             <!--Div der holder overskriften og den første brødtekst-->
-            <div class="container-fluid text-primary col-lg-6">
+            <div class="overskrift_tekst container-fluid text-primary col-lg-6">
                 <h1 class="sacramento text-center pt-4">Ocean Case</h1>
                 <p class="josefine_sans_regular p-4">
                     Ocean Case er et bæredygtigt tiltag der
@@ -155,43 +155,27 @@
                     de kommende generationers muligheder
                     for at dække deres behov.
                 </p>
-                <div class="col-lg-6">
-                    <p class="josefine_sans_regular p-4 verden_tekst">
-                        Ocean Case bygger på ønsket om at
-                        forbedre miljøet og at passe bedre på
-                        vores verden. Derfor er alle vores pro-
-                        dukter miljøvenlige, produceret i 100%
-                        genanvendelige materialer.
-                        <br>
-                        <br>
-                        Ud over at produkterne er bæredygtige,
-                        har vi dog også sparet på emballagen
-                        vores produkter bliver sendt i. Vi prøver
-                        hele tiden på at blive mere miljøvenlige.
-                    </p>
-                </div>
             </div>
 
-            <div class="verden_kompost">
-                <div>
-                    <img src="images/verden_kompost.jpg" alt="Verdenskort" class="verden_center">
-                </div>
 
-                <div class="col-lg-6">
-                    <p class="josefine_sans_regular p-4 verden_tekst">
-                        Ocean Case bygger på ønsket om at
-                        forbedre miljøet og at passe bedre på
-                        vores verden. Derfor er alle vores pro-
-                        dukter miljøvenlige, produceret i 100%
-                        genanvendelige materialer.
-                        <br>
-                        <br>
-                        Ud over at produkterne er bæredygtige,
-                        har vi dog også sparet på emballagen
-                        vores produkter bliver sendt i. Vi prøver
-                        hele tiden på at blive mere miljøvenlige.
-                    </p>
-                </div>
+            <div class="verdenskort_billede verden_kompost">
+                <img src="images/verden_kompost.jpg" alt="Verdenskort" class="verden_center">
+            </div>
+
+            <div class="lilla_tekst col-lg-6 verden_kompost">
+                <p class="josefine_sans_regular p-4 verden_tekst text-start">
+                    Ocean Case bygger på ønsket om at
+                    forbedre miljøet og at passe bedre på
+                    vores verden. Derfor er alle vores pro-
+                    dukter miljøvenlige, produceret i 100%
+                    genanvendelige materialer.
+                    <br>
+                    <br>
+                    Ud over at produkterne er bæredygtige,
+                    har vi dog også sparet på emballagen
+                    vores produkter bliver sendt i. Vi prøver
+                    hele tiden på at blive mere miljøvenlige.
+                </p>
             </div>
 
     </div>
