--- a/om.html
+++ b/om.html
@@ -18,7 +18,7 @@
     <meta name="copyright" content="Skoleprojekt">
 
 
-    <!-- liknk til ikoner og fonter-->
+    <!-- Links til ikoner og fonts-->
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
 
-    <!--Link til Sacramento font-->
+
+    <!--Links til Sacramento font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
@@ -59,7 +60,6 @@
 </head>
 
 
-
 <!--I <body> har man alt indhold på siden som brugeren kan se-->
 <body>
 
@@ -69,7 +69,7 @@
     <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
     <div>
 
-        <!--nav bar-->
+        <!--Navbar-->
         <div class="container-fluid h-auto navbar-container cole">
             <div class="navbar row p-3">
 
@@ -158,10 +158,12 @@
             </div>
 
 
+            <!--Div der holder billede af verdenskort-->
             <div class="verdenskort_billede verden_kompost">
                 <img src="images/verden_kompost.jpg" alt="Verdenskort" class="verden_center">
             </div>
 
+            <!--Div der holder mere brødtekst-->
             <div class="lilla_tekst col-lg-6 verden_kompost">
                 <p class="josefine_sans_regular p-4 verden_tekst text-start">
                     Ocean Case bygger på ønsket om at
@@ -179,7 +181,6 @@
             </div>
 
     </div>
-
 
 
         <!--footer 1-->
