Forsøgt at ændre container fluid så text var centreret...

--- a/samsung.html
+++ b/samsung.html
@@ -108,15 +108,11 @@
 
 <!--Farvet container/boks med teksten Samsung og Køb et lækkert cover til din Samsung telefon-->
 
-<div class="container-fluid">
-    <div class="row h-100 align-items-center bg-primary">
-        <div class="col text-center text-white">
-            <h1 class="text">Samsung</h1>
-            <p class="text2">Køb et lækkert cover til din Samsung</p>
-        </div>
+<div class="container-fluid text-center bg-primary col text-white">
+    <h1 class="text">Samsung</h1>
+    <p class="text2">Køb et lækkert cover til din Samsung</p>
     </div>
 </div>
-
 
 <!--Boks med vores røde cover, samt navn,pris og kurv-knap, der linker til indkøbskurv-->
 
