--- a/samsung.html
+++ b/samsung.html
@@ -108,9 +108,12 @@
 
 <!--Farvet container/boks med teksten Samsung og Køb et lækkert cover til din Samsung telefon-->
 
-<div class="container-fluid text-center bg-primary col text-white">
-    <h1 class="text">Samsung</h1>
-    <p class="text2">Køb et lækkert cover til din Samsung</p>
+<div class="container-fluid">
+    <div class="row h-100 align-items-center bg-primary">
+        <div class="col text-center text-white">
+            <h1 class="">Samsung</h1>
+            <p class="mt-2">Køb et lækkert cover til din Samsung</p>
+        </div>
     </div>
 </div>
 
