--- a/login.html
+++ b/login.html
@@ -60,6 +60,7 @@
 
 
     <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
+    <!--navbar-->
     <div class="container-fluid h-auto navbar-container cole">
         <div class="navbar row p-3">
 
@@ -114,6 +115,7 @@
 
 
         <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
+    <!--text-->
 
         <div class="tekst20 col text-center m-5"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
 
