--- a/indkoebskurv.html
+++ b/indkoebskurv.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Amanda, Loay, Mikkel, Sophie">
     <meta name="copyright" content="Skoleprojekt">
 
-
+<!--link til fonter og ikoner-->
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,6 +50,7 @@
 <body>
 
 <!-- Her skal sidens indhold ligge -->
+<!--navbar-->
 <div class="container-fluid h-auto navbar-container cole">
     <div class="navbar row p-3">
 
@@ -70,6 +71,7 @@
         </div>
 
         <div class="col-8 col-lg-4 text-center">
+            <!--logo-->
             <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
         </div>
         <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
@@ -80,7 +82,7 @@
                       transform="translate(-1.5 -3.03)" fill="#fff"/>
             </svg></a></div>
 
-
+        <!--navbar og link til sider og burgermenu-->
         <div class="nav col-12 col-lg-8">
             <div class="row justify-content-end">
                 <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
@@ -102,7 +104,7 @@
 </div>
 
 
-
+<!-- label og input til kort-->
 <div class="d-flex flex-column  align-content-stretch p-3 indkøb ">
     <label class="p-3" for="cname">Navn</label>
     <input class="p-2"  type="text" id="cname" name="Navn">
@@ -128,7 +130,7 @@
 
 
 
-
+<!--footer 1-->
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
         <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa" d="M33.054,16.263s.534,2.616.654,3.164H31.359c.232-.626,1.125-3.059,1.125-3.059-.014.021.232-.64.373-1.048l.2.942ZM40.5,5.625v24.75a3.376,3.376,0,0,1-3.375,3.375H3.375A3.376,3.376,0,0,1,0,30.375V5.625A3.376,3.376,0,0,1,3.375,2.25h33.75A3.376,3.376,0,0,1,40.5,5.625ZM10.723,23.288l4.444-10.913H12.178L9.415,19.828l-.3-1.512L8.128,13.3a1.176,1.176,0,0,0-1.28-.921H2.3l-.049.218a11.158,11.158,0,0,1,2.967,1.2l2.517,9.492Zm6.638.014,1.772-10.927H16.305L14.541,23.3h2.82ZM27.2,19.73c.014-1.245-.745-2.194-2.37-2.974-.991-.5-1.6-.837-1.6-1.35.014-.464.513-.942,1.624-.942a4.845,4.845,0,0,1,2.1.415l.253.12.387-2.363a7.022,7.022,0,0,0-2.531-.464c-2.791,0-4.753,1.491-4.767,3.614-.021,1.568,1.406,2.44,2.475,2.967,1.09.534,1.462.886,1.462,1.357-.014.731-.886,1.069-1.695,1.069a5.632,5.632,0,0,1-2.651-.584l-.373-.176-.394,2.454a8.628,8.628,0,0,0,3.15.584C25.242,23.463,27.176,21.994,27.2,19.73ZM37.125,23.3,34.847,12.375H32.66a1.391,1.391,0,0,0-1.477.907l-4.2,10.02h2.967s.485-1.35.591-1.638h3.628c.084.387.338,1.638.338,1.638Z" transform="translate(0 -2.25)" fill="#333"/>
@@ -166,7 +168,7 @@
     </svg>
 
 </div>
-
+<!--footer 2-->
 <div class= "footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
