--- a/iphone.html
+++ b/iphone.html
@@ -13,6 +13,7 @@
     <title>iPhone Covers</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
+    <!--link til ikoner og fonter-->
     <meta name="robots" content="All">
     <meta name="author" content="Amanda, Loay, Mikkel, Sophie">
     <meta name="copyright" content="Skoleprojekt">
@@ -49,7 +50,7 @@
 
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
-
+<!--navbar-->
 <div class="container-fluid h-auto navbar-container cole">
     <div class="navbar row p-3">
 
@@ -68,7 +69,7 @@
 
             </div>
         </div>
-
+<!--logo-->
         <div class="col-8 col-lg-4 text-center">
             <a href="index.html"><h1 class="logo">Ocean Case</h1></a>
         </div>
@@ -80,7 +81,7 @@
                       transform="translate(-1.5 -3.03)" fill="#fff"/>
             </svg></a></div>
 
-
+        <!--navbar og link til sider og burgermenu-->
         <div class="nav col-12 col-lg-8">
             <div class="row justify-content-end">
                 <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
@@ -102,7 +103,7 @@
 </div>
 
 
-
+<!--fortext-->
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
@@ -111,7 +112,7 @@
         </div>
     </div>
 </div>
-
+<!--cover og telefoner-->
 <div class="row gy-3">
     <div class="row gy-3 mt-3 justify-content-center">
         <div class="col-auto">
@@ -132,6 +133,7 @@
                     <p class="pt-2 text-center">Flower</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
+                <!--læg i kurv-->
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
@@ -143,6 +145,7 @@
                     <p class="pt-2 text-center">Earth</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
+                <!--læg i kurv-->
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
@@ -154,6 +157,7 @@
                 <p class="pt-2 text-center">Woman</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
+                <!--læg i kurv-->
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
@@ -165,6 +169,7 @@
                     <p class="pt-2 text-center">Flower</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
+                <!--læg i kurv-->
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
         </div>
@@ -215,7 +220,7 @@
     </div>
 
 </div>
-
+<!--footer-->
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
         <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa"
@@ -279,7 +284,7 @@
     </svg>
 
 </div>
-
+<!--footer 2-->
 <div class="footer p-3">
     <div class="d-flex justify-content-between">
         <ul>
