--- a/login.html
+++ b/login.html
@@ -172,7 +172,7 @@
         <br>
 
 
-        <!--Footer-->
+        <!--Footer 1-->
         <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
                 <path id="Icon_awesome-cc-visa" data-name="Icon awesome-cc-visa"
@@ -236,7 +236,7 @@
             </svg>
 
         </div>
-
+        <!--footer 2-->
         <div class="footer p-3">
             <div class="d-flex justify-content-between">
                 <ul>
